objects/Account.object
<CustomObject>
    <fields>
        <fullName>Pharmacy_Operations_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pharmacy Operations User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5Y7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Account_Legal_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Account Legal Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Production_ID_Card_Tech_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production ID Card Tech User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5YR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Specialist_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Specialist User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5Xn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Auditor_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Auditor User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5Wa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating_State__c</fullName>
        <label>Rating State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecType_Agency_NPN__c</fullName>
        <description>This field will hold the Agency NPN concatenated with the record type name and this will be a unique field and used as external Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>RecType Agency NPN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecType_Entity_ID__c</fullName>
        <description>This field will hold the Entitiy Id concatenated with the record type name and this will be a unique field and used a s external Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>RecType_Entity_ID</label>
        <length>22</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RecType_Facets_Account_Number__c</fullName>
        <description>This field will hold the Concatination of Record type name and Facets Account Number Field</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>RecType Facets Account Number</label>
        <length>22</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Recent_Sold_BRF_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recent_Sold_BRF_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Sold_Opportunity_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recent_Sold_Opportunity_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Anniversary_Month__c</fullName>
        <description>The month that the current carrier's product comes up for potential renewal.  This is a good time to get back with the Account.</description>
        <label>Renewal Anniversary Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <formula>CASE( Renewal_Anniversary_Month__c , 
'JAN',DATE( YEAR( TODAY() ) ,1,1), 
'FEB',DATE( YEAR( TODAY() ) ,2,1), 
'MAR',DATE( YEAR( TODAY() ) ,3,1), 
'APR',DATE( YEAR( TODAY() ) ,4,1), 
'MAY',DATE( YEAR( TODAY() ) ,5,1), 
'JUN',DATE( YEAR( TODAY() ) ,6,1), 
'JUL',DATE( YEAR( TODAY() ) ,7,1), 
'AUG',DATE( YEAR( TODAY() ) ,8,1), 
'SEP',DATE( YEAR( TODAY() ) ,9,1), 
'OCT',DATE( YEAR( TODAY() ) ,10,1), 
'NOV',DATE( YEAR( TODAY() ) ,11,1), 
'DEC',DATE( YEAR( TODAY() ) ,12,1), 
NULL)</formula>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>This field is technical field which is used in filters of list views</description>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Dedicated Rep</fullName>
                </value>
                <value>
                    <fullName>Account Dedicated Rep Back-up</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Actuary</fullName>
                </value>
                <value>
                    <fullName>AE BA</fullName>
                </value>
                <value>
                    <fullName>AIA Admin</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Audit Manager/Supervisor</fullName>
                </value>
                <value>
                    <fullName>BeneFact Coder</fullName>
                </value>
                <value>
                    <fullName>BeneFact Portal Tech</fullName>
                </value>
                <value>
                    <fullName>Benefit Admin Account Set-up</fullName>
                </value>
                <value>
                    <fullName>Benefit Admin Mgr/Sup</fullName>
                </value>
                <value>
                    <fullName>Benefit Admin Workflow Mgmt</fullName>
                </value>
                <value>
                    <fullName>Benefit Contract Manager</fullName>
                </value>
                <value>
                    <fullName>Benefit Contract Specialist</fullName>
                </value>
                <value>
                    <fullName>Benefit NASCO Tester</fullName>
                </value>
                <value>
                    <fullName>Billing Tech</fullName>
                </value>
                <value>
                    <fullName>BlueExchange Coder</fullName>
                </value>
                <value>
                    <fullName>Blue Rewards</fullName>
                </value>
                <value>
                    <fullName>Business Integration Manager</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>Cede Document Upload</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Contract Coordinator</fullName>
                </value>
                <value>
                    <fullName>Contract Supervisor</fullName>
                </value>
                <value>
                    <fullName>Contract Tech</fullName>
                </value>
                <value>
                    <fullName>Corporate Marketing Communications</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Assistant_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Assistant User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Self_Bill_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-Bill Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Settlements_Analyst_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlements Analyst User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5Yl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_County__c</fullName>
        <description>What is the county of the shipping address?</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status defines if the 2-50 customer account is active or termed based on the active file or the term file that it was updated from.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Termed</fullName>
                </value>
                <value>
                    <fullName>Migrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subgroup__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subgroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDN__c</fullName>
        <label>TDN</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No TDN</fullName>
                </value>
                <value>
                    <fullName>TDN Dental/HMO</fullName>
                </value>
                <value>
                    <fullName>TDN Disc</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TPA_Labor__c</fullName>
        <label>TPA (Labor)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>American Benefit Corporation</fullName>
                </value>
                <value>
                    <fullName>Associated Administrators</fullName>
                </value>
                <value>
                    <fullName>Carday Associates</fullName>
                </value>
                <value>
                    <fullName>CDA Administrators</fullName>
                </value>
                <value>
                    <fullName>GEMGROUP</fullName>
                </value>
                <value>
                    <fullName>MEBA</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Southern Benefit Administrators</fullName>
                </value>
                <value>
                    <fullName>West Virginia Laborers</fullName>
                </value>
                <value>
                    <fullName>Zenith Administrators</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Account_URL__c</fullName>
        <formula>left($Api.Enterprise_Server_URL_200 , FIND("/", $Api.Enterprise_Server_URL_200, 9))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Level__c</fullName>
        <defaultValue>("--None--")</defaultValue>
        <label>Tier Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SELECT</fullName>
                </value>
                <value>
                    <fullName>Elite</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_Account_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Top Account Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Account__c</fullName>
        <label>Top Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tuesday_Morn__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tuesday-Morn</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriter_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriter User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Urgent_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Track if customer has urgent cases</description>
        <inlineHelpText>Track if customer has urgent cases???</inlineHelpText>
        <label>Urgent Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Type__c</fullName>
        <label>Vendor Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>CDH Funding</fullName>
                </value>
                <value>
                    <fullName>ID Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Analyst_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vision Analyst User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wellness_Tech_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wellness Tech User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5Xd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X200_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>200+ Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X200_NASCO_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag represents whether account is 200+ NASCO Account" when its true else false.</description>
        <label>200+ NASCO Account</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Facets_Account_Number__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Entity_ID__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.X51</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Ideal Innovations Incorporated</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Partners</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Facets_Account_Number__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Entity_ID__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.X51</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filters>
        <label>All Partners</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Accounts_Operations_Teams</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Renewal_Date__c</columns>
        <columns>Control_Plan__c</columns>
        <columns>Jurisdiction__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Benefit_Tester_User__c</columns>
        <columns>BeneFact_Coder_User__c</columns>
        <columns>Benefit_Coder_User__c</columns>
        <columns>Mast_Tech_User__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Termed</value>
        </filters>
        <filters>
            <field>Benefit_Tester_User__c</field>
            <operation>contains</operation>
            <value>Willie</value>
        </filters>
        <label>My Accounts - Operations Teams</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Entity_ID__c</columns>
        <columns>Agency_NPN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.X2_50</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Tester_Tester</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Tier_Level__c</columns>
        <columns>Broker_Service_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.X2_50,Account.X51</value>
        </filters>
        <label>Tester Tester</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X200_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>NASCO_Account_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.X51</value>
        </filters>
        <filters>
            <field>NASCO_Account_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>200+ Accounts</label>
    </listViews>
    <listViews>
        <fullName>X51_All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Top_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.X51</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Development Services Group</value>
        </filters>
        <label>51+ All Accounts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>VicePresidentandStaffLaborSales</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VicePresidentsandStaff</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>X2_50_Role</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>X2_50</fullName>
        <active>true</active>
        <label>2-50</label>
    </recordTypes>
    <recordTypes>
        <fullName>X51</fullName>
        <active>true</active>
        <label>51+</label>
    </recordTypes>
    <validationRules>
        <fullName>Alex_E001_Billing_State_Must_Be_MD</fullName>
        <active>true</active>
        <description>If ISBLANK( Entity_ID__c ) i.e. RecordType.DeveloperName ='X51'   its a 51+ Account perform validation</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; 
LEN(TEXT(Billing_County_Code__c)) &gt; 0 &amp;&amp; 
UPPER(BillingState) &lt;&gt; 'MD' &amp;&amp; 
RecordType.DeveloperName ='X51'

/* TPB 08/26/2013
IF(LEN(TEXT(Billing_County_Code__c)) &gt; 0 &amp;&amp; UPPER(BillingState) &lt;&gt; 'MD', TRUE, FALSE)
*/
/* AO updates 09/28/2015
Changed ISblank(entity_id__c) to RecordType.DeveloperName ='X51'
*/</errorConditionFormula>
        <errorDisplayField>Billing_County_Code__c</errorDisplayField>
        <errorMessage>001: Enter a County Code only when the Billing State is "MD'</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E001_Billing_State_Must_Be_MD</fullName>
        <active>true</active>
        <description>If ISBLANK( Entity_ID__c ) i.e. RecordType.DeveloperName ='X51'   its a 51+ Account perform validation</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; 
LEN(TEXT(Billing_County_Code__c)) &gt; 0 &amp;&amp; 
UPPER(BillingState) &lt;&gt; 'MD' &amp;&amp; 
RecordType.DeveloperName ='X51'

/* TPB 08/26/2013
IF(LEN(TEXT(Billing_County_Code__c)) &gt; 0 &amp;&amp; UPPER(BillingState) &lt;&gt; 'MD', TRUE, FALSE)
*/
/* AO updates 09/28/2015
Changed ISblank(entity_id__c) to RecordType.DeveloperName ='X51'
*/</errorConditionFormula>
        <errorDisplayField>Billing_County_Code__c</errorDisplayField>
        <errorMessage>001: Enter a County Code only when the Billing State is "MD'</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E002_Billing_State_US_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Permission.Ignore_Validation_Rules, FALSE,
AND( 
RecordType.DeveloperName ='X51', 
OR(UPPER(BillingCountry)="US", UPPER(BillingCountry)="U.S.", UPPER(BillingCountry)="USA", BillingCountry="U.S.A.", UPPER(BillingCountry)="UNITED STATES",UPPER(BillingCountry)="UNITED STATE", LEN(BillingCountry)=0), 
OR( NOT( 
CONTAINS("AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:" &amp; 
"IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:" &amp; 
"NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:" &amp; 
"WA:WV:WI:WY", BillingState))))
)</errorConditionFormula>
        <errorDisplayField>BillingState</errorDisplayField>
        <errorMessage>002: Enter a valid two-character abbreviation for Billing State.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E003_Billing_State_CAN_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Permission.Ignore_Validation_Rules, FALSE,
AND ( 
RecordType.DeveloperName ='X51',
OR(UPPER(BillingCountry)="CA", UPPER(BillingCountry)="CAN", UPPER(BillingCountry)="CANADA"), 
OR(NOT( 
CONTAINS("AB:BC:MB:NB:NL:NT:NS:NU:ON:PC:QC:SK:YT", BillingState) 
)))
)</errorConditionFormula>
        <errorDisplayField>BillingState</errorDisplayField>
        <errorMessage>003: Canada Billing Country requires a valid two-character abbreviation for Billing State</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E004_Shipping_State_US_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Permission.Ignore_Validation_Rules, FALSE,
AND ( 
OR(UPPER(ShippingCountry)="US", UPPER(ShippingCountry)="USA", UPPER(ShippingCountry)="UNITED STATES", UPPER(ShippingCountry)="UNITED STATE", LEN(ShippingCountry)=0), 
OR( NOT( 
CONTAINS("AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:" &amp; 
"IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:" &amp; 
"NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:" &amp; 
"WA:WV:WI:WY", UPPER(ShippingState)))))
)</errorConditionFormula>
        <errorDisplayField>ShippingState</errorDisplayField>
        <errorMessage>004: Enter a valid two-character abbreviation for Shipping State</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E005_Shipping_State_CAN_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Permission.Ignore_Validation_Rules, FALSE,
AND ( 
OR(UPPER(ShippingCountry) = "CA", UPPER(ShippingCountry)="CAN", UPPER(ShippingCountry)="CANADA"), 
OR(NOT( 
CONTAINS("AB:BC:MB:NB:NL:NT:NS:NU:ON:PC:QC:SK:YT", ShippingState) 
)))
)</errorConditionFormula>
        <errorDisplayField>ShippingState</errorDisplayField>
        <errorMessage>005: Canada Shipping Country requires a valid two-character abbreviation for Shipping State</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E006_Billing_Country_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Permission.Ignore_Validation_Rules, FALSE,
AND(RecordType.DeveloperName ='X51', 
LEN(BillingCountry) &lt; 2, 
LEN(BillingCountry) &lt;&gt; 0)
)</errorConditionFormula>
        <errorDisplayField>BillingCountry</errorDisplayField>
        <errorMessage>006: Enter a two character abbreviation or full name for Billing Country</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E007_Shipping_Country_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Permission.Ignore_Validation_Rules, FALSE,
AND(LEN(ShippingCountry) &lt; 2, LEN(ShippingCountry) &lt;&gt; 0)
)</errorConditionFormula>
        <errorDisplayField>ShippingCountry</errorDisplayField>
        <errorMessage>007: Enter a  two character abbreviation or full name for  Shipping Country</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E008_AccountName_Less_100</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; 
LEN(Name) &gt; 100 &amp;&amp;
RecordType.DeveloperName ='X51'</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>008: Enter an Account name with less than 100 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E009_Billing_PostalCode_US_Format</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNULL(BillingPostalCode) || BillingPostalCode = "", FALSE,
AND(
RecordType.DeveloperName ='X51', 
NOT($Permission.Ignore_Validation_Rules),
OR(BillingCountry = "", UPPER(BillingCountry) = "USA", UPPER(BillingCountry) = "US",  UPPER(BillingCountry) = "U.S.", UPPER(BillingCountry) = "U.S.A.", UPPER(BillingCountry) = "UNITED STATES", UPPER(ShippingCountry) = "UNITED STATE"),
NOT(REGEX(BillingPostalCode, "\\d{5}(-\\d{4})?"))
))</errorConditionFormula>
        <errorDisplayField>BillingPostalCode</errorDisplayField>
        <errorMessage>009: Enter a 5 digit Zip/Postal code or enter a 9 digit Zip/postal code (i.e.: 12345 and 12345-1234)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E010_Billing_PostalCode_CAN_Format</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNULL(BillingPostalCode) || BillingPostalCode = "", FALSE,
AND(
RecordType.DeveloperName ='X51', 
NOT($Permission.Ignore_Validation_Rules),
OR(UPPER(BillingCountry) = "CAN", UPPER(BillingCountry) = "CA", UPPER(BillingCountry) = "CANADA."),
NOT(REGEX(BillingPostalCode, "((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?"))
))</errorConditionFormula>
        <errorDisplayField>BillingPostalCode</errorDisplayField>
        <errorMessage>010: If a Canadian Postal Code is entered it must be in the proper Canadian format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E011_Shipping_PostalCode_US_Format</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNULL(ShippingPostalCode) || ShippingPostalCode = "", FALSE,
AND(
NOT($Permission.Ignore_Validation_Rules),
OR(BillingCountry = "", UPPER(ShippingCountry) = "USA", UPPER(ShippingCountry) = "US", UPPER(ShippingCountry) = "U.S.A.", UPPER(ShippingCountry) = "U.S.A.", UPPER(ShippingCountry) = "UNITED STATES", UPPER(ShippingCountry) = "UNITED STATE"),
NOT(REGEX(ShippingPostalCode, "\\d{5}(-\\d{4})?"))
))</errorConditionFormula>
        <errorDisplayField>ShippingPostalCode</errorDisplayField>
        <errorMessage>011: Enter a 5 digit Zip/Postal code or enter a 9 digit Zip/postal code (i.e.: 12345 and 12345-1234)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E012_Shipping_PostalCode_CAN_Format</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNULL(ShippingPostalCode) || ShippingPostalCode = "", FALSE,
AND(
NOT($Permission.Ignore_Validation_Rules),
OR(UPPER(ShippingCountry) = "CAN", UPPER(ShippingCountry) = "CA", UPPER(ShippingCountry) = "CANADA."),
NOT(REGEX(ShippingPostalCode, "((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?"))
))</errorConditionFormula>
        <errorDisplayField>ShippingPostalCode</errorDisplayField>
        <errorMessage>012: If Canada Shipping Postal Code is entered it must be in the proper Canadian format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E013_Billing_County_Code_Required</fullName>
        <active>true</active>
        <description>If Billing State/Providence is MD then the Billing County Code is required</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; 
NOT(ISNEW()) &amp;&amp; 
LEN(TEXT(Billing_County_Code__c)) = 0 &amp;&amp; 
UPPER(BillingState) = 'MD' &amp;&amp; 
RecordType.DeveloperName ='X51'</errorConditionFormula>
        <errorDisplayField>Billing_County_Code__c</errorDisplayField>
        <errorMessage>013: Billing County Code must be selected when Billing State/Province is "MD"</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EACC014</fullName>
        <active>true</active>
        <description>If Consultant__c is checked then Type must be equal to 'Partner'</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; 
Consultant__c = TRUE &amp;&amp; NOT(ISPICKVAL(Type, 'Partner'))</errorConditionFormula>
        <errorDisplayField>Type</errorDisplayField>
        <errorMessage>ACC014: If Consultant is checked then Type must be 'Partner'</errorMessage>
    </validationRules>
</CustomObject>